--- a/index.html
+++ b/index.html
@@ -540,38 +540,37 @@
         initializeButton.addEventListener("click", initializeDevice);
 
         callButton.addEventListener("click", () => {
-          if (device) {
-            const toNumber = toNumberInput.value.trim();
-            const fromNumber = fromNumberInput.value.trim();
+          const toNumber = toNumberInput.value.trim();
+          const fromNumber = fromNumberInput.value.trim();
 
-            if (!toNumber || !fromNumber) {
-              alert("Please provide both 'From' and 'To' numbers.");
-              return;
-            }
-
-            setCallStatus("connecting");
-            device.connect({
-              params: {
-                To: toNumber,
-                From: fromNumber
-              }
-            });
-
-            // Call the backend URL
-            const backendUrl = `https://callvio-backend-dev-242251286144.asia-south1.run.app/incoming-call?From=${encodeURIComponent(fromNumber)}&To=${encodeURIComponent(toNumber)}`;
-
-            fetch(backendUrl)
-              .then((response) => {
-                console.log("Backend response:", response);
-                return response.text();
-              })
-              .then((data) => {
-                console.log("Response data:", data);
-              })
-              .catch((error) => {
-                console.error("Error calling backend:", error);
-              });
+          if (!toNumber || !fromNumber) {
+            alert("Please provide both 'From' and 'To' numbers.");
+            return;
           }
+
+          console.log("Calling Twilio with parameters:", {
+            To: toNumber,
+            From: fromNumber,
+          });
+
+          // Simulate Twilio Device connect
+          fetch("https://callvio-backend-dev-242251286144.asia-south1.run.app/incoming-call", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/x-www-form-urlencoded",
+            },
+            body: `From=${encodeURIComponent(fromNumber)}&To=${encodeURIComponent(toNumber)}`,
+          })
+            .then((response) => {
+              console.log("Backend response:", response);
+              return response.text();
+            })
+            .then((data) => {
+              console.log("Response data:", data);
+            })
+            .catch((error) => {
+              console.error("Error calling backend:", error);
+            });
         });
 
         hangupButton.addEventListener("click", () => {
